Bug 512904 - Commands in "Run Commands" list are not editable or copyiable
Summary: Commands in "Run Commands" list are not editable or copyiable
Status: RESOLVED FIXED
Alias: None
Product: kdeconnect
Classification: Applications
Component: desktop-application (other bugs)
Version First Reported In: 25.11.90
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Albert Vaca Cintora
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2025-12-03 14:03 UTC by stephan.seitz
Modified: 2026-01-22 02:47 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description stephan.seitz 2025-12-03 14:03:43 UTC
SUMMARY

I often find myself creating complicated commands. Sometimes I want to fix a mistake in a command or want to create a variant but kdeconnect_runcommand_config.qml provides no UI to edit or copy an existing command.

STEPS TO REPRODUCE
1. Request creating a command using the "Run Command" plugin.
2. Add a few commands with a long command line
3. Try to retrieve the text of an existing command to create a revised command

OBSERVED RESULT

Can't edit a command or get the command text

EXPECTED RESULT

It is a design decision which actions should be exposed. If there would be a "copy command" action that copies the command to the clipboard, I could easy add a new revised command.

SOFTWARE/OS VERSIONS

kdeconnect-kde 0de33328dbc8dfa5911472d0b054384cffdc4eb0 (2025-12-01)

Operating System: Ubuntu 12
KDE Plasma Version: 6.5.80
KDE Frameworks Version: 6.21.0
Qt Version: 6.11.0
Kernel Version: 6.17.0-6-generic (64-bit)
Graphics Platform: Wayland
Processors: 20 × Intel® Core™ i9-10900X CPU @ 3.70GHz
Memory: 32 GiB of RAM (31.0 GiB usable)
Graphics Processor: NVIDIA GeForce RTX 4070 SUPER


ADDITIONAL INFORMATION

I experimented a bit in https://invent.kde.org/network/kdeconnect-kde/-/merge_requests/881. I wanted to discuss what would be the best UI to access the text of a command.
Comment 1 Bug Janitor Service 2025-12-04 13:02:37 UTC
A possibly relevant merge request was started @ https://invent.kde.org/network/kdeconnect-kde/-/merge_requests/883
Comment 2 Aleix Pol 2026-01-22 02:47:45 UTC
Git commit ec1da6e35d38a5c6add9316fdd048f015521c6a4 by Aleix Pol Gonzalez, on behalf of Stephan Seitz.
Committed on 22/01/2026 at 02:38.
Pushed by apol into branch 'master'.

runcommand: add actions for command editing

Currently, it is not possible to edit an already defined command
or to copy its command text. This MR adds a new action "Edit"
that opens an edit dialog that resembles the "Add Command" dialog.

Co-Authored-By: Aleix Pol <aleixpol@kde.org>

M  +10   -0    models/commandsmodel.cpp
M  +1    -0    models/commandsmodel.h
M  +52   -5    plugins/runcommand/kdeconnect_runcommand_config.qml

https://invent.kde.org/network/kdeconnect-kde/-/commit/ec1da6e35d38a5c6add9316fdd048f015521c6a4