runcommand: add actions for command editing

Currently, it is not possible to edit an already defined command
or to copy its command text. This MR adds a new action "Edit"
that opens an edit dialog that resembles the "Add Command" dialog.

Co-Authored-By: Aleix Pol <aleixpol@kde.org>

BUG: 512904